17 練習透過 Entity Framework 查詢資料、建立資料、刪除資料、取出單筆資料

--- a/MVC5Practice/MVC5Practice.csproj
+++ b/MVC5Practice/MVC5Practice.csproj
@@ -181,6 +181,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ClientsController.cs" />
+    <Compile Include="Controllers\EFController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\ProductsController.cs" />
@@ -309,6 +310,11 @@
     <Content Include="Views\Clients\Index.cshtml" />
     <Content Include="Views\Clients\Login.cshtml" />
     <Content Include="Views\Clients\LoginResult.cshtml" />
+    <Content Include="Views\EF\Create.cshtml" />
+    <Content Include="Views\EF\Delete.cshtml" />
+    <Content Include="Views\EF\Details.cshtml" />
+    <Content Include="Views\EF\Edit.cshtml" />
+    <Content Include="Views\EF\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
