--- a/MVC5Practice/Web.config
+++ b/MVC5Practice/Web.config
@@ -25,7 +25,7 @@
     <httpRuntime targetFramework="4.6.1" />
   </system.web>
   <system.webServer>
-    <modules runAllManagedModulesForAllRequests="true">
+    <modules>
       <remove name="FormsAuthentication" />
     </modules>
     <handlers>
