--- a/MVC5Practice/MVC5Practice.csproj
+++ b/MVC5Practice/MVC5Practice.csproj
@@ -180,6 +180,7 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\ARController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\ClientsController.cs" />
     <Compile Include="Controllers\EFController.cs" />
@@ -376,6 +377,8 @@
     <Content Include="Views\EF\Details.cshtml" />
     <Content Include="Views\EF\Edit.cshtml" />
     <Content Include="Views\EF\Index.cshtml" />
+    <Content Include="Views\AR\PartialViewTest.cshtml" />
+    <Content Include="Views\AR\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
