在 Views\Web.config 加入全站共用的 namespace 宣告

--- a/MVC5Practice/MVC5Practice.csproj
+++ b/MVC5Practice/MVC5Practice.csproj
@@ -407,6 +407,7 @@
     <Content Include="Views\Shared\_LayoutBootstrap.cshtml" />
     <Content Include="Views\VT\NewIndex.cshtml" />
     <Content Include="Views\VT\_ViewStart.cshtml" />
+    <Content Include="Views\Clients\Web.config" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
