54 練習在特定模型類別下的某個屬性設定 [UIHint] 自訂 DisplayTemplates 與 EditorTemplates

--- a/MVC5Practice/MVC5Practice.csproj
+++ b/MVC5Practice/MVC5Practice.csproj
@@ -417,6 +417,8 @@
     <Content Include="Views\Clients\ClientOrders.cshtml" />
     <Content Include="Views\Shared\DisplayTemplates\Client.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\Client.cshtml" />
+    <Content Include="Views\Shared\DisplayTemplates\CreditRating.cshtml" />
+    <Content Include="Views\Shared\EditorTemplates\Date.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
