--- a/MVC5Practice/Web.config
+++ b/MVC5Practice/Web.config
@@ -20,13 +20,15 @@
   </appSettings>
   <system.web>
     <customErrors mode="Off"></customErrors>
-    <authentication mode="None" />
+    <authentication mode="Forms">
+      <forms loginUrl="/Home/Login"></forms>
+    </authentication>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
   </system.web>
   <system.webServer>
     <modules>
-      <remove name="FormsAuthentication" />
+      <!--<remove name="FormsAuthentication" />-->
     </modules>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
